help-screen-scrollbar-fixed

--- a/src/components/HelpModal/HelpModal.module.scss
+++ b/src/components/HelpModal/HelpModal.module.scss
@@ -83,8 +83,6 @@
   border: 1px solid #f2f4f7;
   border-radius: 8px;
 
-  /* Inside auto layout */
-
   flex: none;
   order: 0;
   align-self: stretch;
@@ -92,7 +90,7 @@
 
   margin-bottom: 20px;
 
-  overflow-x: visible;
+  overflow-x: auto;
   overflow-y: hidden;
 }
 
@@ -124,11 +122,14 @@
   flex: none;
   order: 0;
   flex-grow: 0;
+
+  transition: 100ms;
 }
 
 .activeTab {
   box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
   border-radius: 6px;
+  transition: 200ms;
 }
 
 .content {
@@ -150,9 +151,6 @@
 
   width: 100%;
   height: 24px;
-
-  /* Inside auto layout */
-
   flex: none;
   order: 0;
   align-self: stretch;
@@ -161,19 +159,19 @@
   margin-bottom: 20px;
 }
 
+.contentText {
+  height: 32.4rem;
+  overflow-y: auto;
+  padding-right: 5px;
+}
+
 .titleText {
   font-family: "Inter";
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
-  /* identical to box height, or 150% */
-
-  /* Gray/900 */
-
   color: #101828;
-
-  /* Inside auto layout */
 
   flex: none;
   order: 0;
@@ -181,12 +179,11 @@
   flex-grow: 0;
 }
 
-/* width */
 ::-webkit-scrollbar {
   height: 10px;
+  width: 10px;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
   background: #d4d4d4;
   border-radius: 10px;
